--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,13 +5,14 @@
 #    password:
 #    driver-class-name: org.h2.Driver
 #
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        #show_sql: true
-#        format_sql: true
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #show_sql: true
+        format_sql: true
 logging:
   level:
     org.hibernate.SQL: debug
