--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,15 @@ spring:
       hibernate:
         #show_sql: true
         format_sql: true
+
+        # ======== pageable 디폴트 값 설정 ========#
+  data:
+    web:
+      pageable:
+        default-page-size: 10 # 10개로 변경
+        max-page-size: 2000
+        one-indexed-parameters: true # 1부터 시작함
+
 logging:
   level:
     org.hibernate.SQL: debug
