--- a/spring-querydsl/src/main/resources/application.yml
+++ b/spring-querydsl/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
         # show_sql: true
         format_sql: true
+        use_sql_comments: true # querydsl로 만들어진 jpql을 볼 수 있다
 
 
 logging.level:
